# MCYJ-Datapipeline

./: .gitignore  CACHING_INVESTIGATION.md  EXECUTION_GUIDE.md  EXECUTION_RESULTS.md  EXECUTION_STATUS.md  INVESTIGATION_SUMMARY.md  README.md  RUN_SIR_QUERY.md  Statcom_december_2_modified.ipynb  TESTING_GUIDE.md  TESTING_SUMMARY.md  analyze_document_structures.py  build.sh  check_duplicate_consistency.py  decrypt_api_key.py  download_all_pdfs.py  errata_investigation_report.txt  example_sir_query_results.csv  final_integration_test.py  focused_errata_report.txt  fom_format_analysis.md  format_variations_analysis.md  generate_website_data.py  investigate_sha.py  investigate_violations_errata.py  netlify.toml  parse_agency_files.py  parse_available_files.py  parse_parquet_violations.py  pull_agency_info_api.py  pyproject.toml  query_log.txt  query_sirs.py  remaining_mismatches_analysis.md  run_sir_queries.sh  run_violations_demo.sh  section_structure_variations.md  sir_query_results.csv  structural_variants_analysis.md  structure_agnostic_analysis.md  (+10 more)
mcyj_datapipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pdf_parsing/: README.md  extract_pdf_text.py  investigate_violations.py  parse_parquet_rules.py  parse_parquet_violations.py  sir_summaries.csv  sir_violation_levels.csv  update_sir_summaries.py  update_summaryqueries.py  update_violation_levels.py
special_report_parsing/: PARSER_DESIGN.md  parse_special_reports.py
website/: AI_QUERY_FEATURE.md  PASSWORD_ERROR_CONDITIONS.md  README.md  build.sh  export_parquet_to_json.py  generate_website_data.py  index.html  (+6 more)
(+10 files in other folders)
